objects/Integration__c.object
<CustomObject>
    <fields>
        <fullName>Boolean01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean01</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boolean02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean02</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boolean03__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean03</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date01__c</fullName>
        <label>Date01</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date02__c</fullName>
        <label>Date02</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date03__c</fullName>
        <label>Date03</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTime01__c</fullName>
        <label>DateTime01</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime02__c</fullName>
        <label>DateTime02</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime03__c</fullName>
        <label>DateTime03</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_system__c</fullName>
        <label>External system</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields_Updated__c</fullName>
        <label>Fields Updated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LongText01__c</fullName>
        <label>LongText01</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongText02__c</fullName>
        <label>LongText02</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>error or notes</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number01__c</fullName>
        <label>Number01</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number02__c</fullName>
        <label>Number02</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number03__c</fullName>
        <label>Number03</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>Insert/Update/Delete</description>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>Recordtype of individual SFDC object</description>
        <label>RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Id__c</fullName>
        <description>SFDC ID of object to update</description>
        <label>SFDC Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Object__c</fullName>
        <description>SFDC object being updated</description>
        <label>SFDC Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>New/Processed/Failed/Duplicate</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextField01__c</fullName>
        <label>TextField01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextField02__c</fullName>
        <label>TextField02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextField03__c</fullName>
        <label>TextField03</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSuccess</label>
        <type>Checkbox</type>
    </fields>
    <label>Integration</label>
    <nameField>
        <label>Integration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrations</pluralLabel>
    <recordTypes>
        <fullName>Budget</fullName>
        <active>true</active>
        <description>Budget Data integration</description>
        <label>Budget</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>